fix bugs images

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
         >
         <ul class="header__top-tels">
           <li>
-            <a class="header__top-tel" href="tel:+(067) 634 -75 - 74"
+            <a class="header__top-tel" href="tel:(067) 634 -75 - 74"
               >(067) 634 -75 - 74</a
             >
           </li>
           <li>
             <a
               class="header__top-tel header__top-tel--phone"
-              href="tel:+(067) 634 -75 - 74"
+              href="tel:(067) 634 -75 - 74"
               >(0637) 57 - 01 - 31</a
             >
           </li>
           <li>
             <a
               class="header__top-tel header__top-tel--phone"
-              href="tel:+(067) 634 -75 - 74"
+              href="tel:(067) 634 -75 - 74"
               >(098) 266 - 43 - 89</a
             >
           </li>
@@ -128,7 +128,7 @@
               <div class="service__wrapper">
                 <img
                   class="service__wrapper-img"
-                  src="./images/doctor (1).png"
+                  src="./images/doctor.png"
                   alt="image"
                 />
                 <p class="service__wrapper-text">Первичный осмотр</p>
@@ -144,7 +144,7 @@
               <div class="service__wrapper">
                 <img
                   class="service__wrapper-img"
-                  src="./images/wolf (1).png"
+                  src="./images/wolf.png"
                   alt="image"
                 />
                 <p class="service__wrapper-text">Хирургическое вмешательство</p>
@@ -152,7 +152,7 @@
               <div class="service__wrapper">
                 <img
                   class="service__wrapper-img"
-                  src="./images/wolf2 (1).png"
+                  src="./images/wolf2.png"
                   alt="image"
                 />
                 <p class="service__wrapper-text">Дерматология</p>
@@ -160,7 +160,7 @@
               <div class="service__wrapper">
                 <img
                   class="service__wrapper-img"
-                  src="./images/mikroskop (1).png"
+                  src="./images/mikroskop.png"
                   alt="image"
                 />
                 <p class="service__wrapper-text">Лабораторная диагностика</p>
@@ -168,7 +168,7 @@
               <div class="service__wrapper">
                 <img
                   class="service__wrapper-img"
-                  src="./images/wolf3 (1).png"
+                  src="./images/wolf3.png"
                   alt="image"
                 />
                 <p class="service__wrapper-text">Офтальмология</p>
@@ -352,17 +352,17 @@
             <li>
               <a
                 class="footer__item footer__item--tel"
-                href="tel:+(067) 634 -75 - 74"
+                href="tel:(067) 634 -75 - 74"
                 >(067) 634 -75 - 74</a
               >
             </li>
             <li>
-              <a class="footer__item" href="tel:+(067) 634 -75 - 74"
+              <a class="footer__item" href="tel:(067) 634 -75 - 74"
                 >(0637) 57 - 01 - 31</a
               >
             </li>
             <li>
-              <a class="footer__item" href="tel:+(067) 634 -75 - 74"
+              <a class="footer__item" href="tel:(067) 634 -75 - 74"
                 >(098) 266 - 43 - 89</a
               >
             </li>
